--- a/sat_qazan/package.json
+++ b/sat_qazan/package.json
@@ -24,7 +24,8 @@
     "react-spring": "^9.7.3",
     "scrollreveal": "^4.0.9",
     "tailwindcss": "^3.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
